rename app title

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
-    <title>Resort App</title>
+    <title>Mid-Mod Hotel</title>
   </head>
   <body>
     <div id="root"></div>
